kubernetes/apps/media/prowlarr/app/httproute.yaml
# Internal access to Prowlarr web UI
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
spec:
  hostnames:
    - "prowlarr.${SECRET_DOMAIN}"
  parentRefs:
    - kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: prowlarr
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
